--- a/arch/arm64/boot/dts/mediatek/Makefile
+++ b/arch/arm64/boot/dts/mediatek/Makefile
@@ -13,5 +13,12 @@ endif
 
 always		:= $(dtb-y)
 subdir-y	:= $(dts-dirs)
+ifeq ($(strip $(CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE)), y)
+dtbo-y += $(addsuffix .dtbo, $(notdir $(subst $\",,$(CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES))))
+endif
+
+always		:= $(dtb-y) $(dtbo-y)
+subdir-y	:= $(dts-dirs)
 clean-files	:= *.dtb
+clean-files	:= *.dtb *.dtbo
 #endif
